--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -133,7 +133,7 @@ html {
 										 	border-left:none;
 										 }
 									}
-								&:hover ul {
+								&:hover > ul {
 									padding:0;
 									background-color:$heavy-gray;
 									display:block;
@@ -282,11 +282,10 @@ html {
 			height:100px;
 			margin-top:-100px;
 			clear: both;
-			text-align:right !important;
 			display:block;
 			margin-bottom:0;
 			color:$light-gray;
-			width:60%;
+			width:68%;
 			padding-top:1em;
 			padding-left:5%;
 			border-top:1px solid $lightest-gray;
@@ -300,7 +299,9 @@ html {
 							transition:color .3s ease;
 						}
 				}
-			ul {	
+			ul {
+				padding-top:8px;	
+				padding-bottom:8px;
 				li {
 					display:inline-block;
 					padding-right:.4em;
@@ -344,7 +345,7 @@ html {
 			max-width:918px;
 			margin-left:auto;
 			margin-right:auto;
-				
+			margin-top:2em;
 		}
 		.banner-container {
 			position:relative;
