--- a/scss/asc.css
+++ b/scss/asc.css
@@ -306,8 +306,9 @@ html {
   html body.single-wsuwp_uc_entity figure.featured-image, html body.single-wsuwp_uc_person figure.featured-image {
     background-size: contain;
     position: absolute;
-    height: 200px;
-    margin-left: 130px;
+    max-height: 250px;
+    width: calc(50% - 170px);
+    margin-left: calc(50% - 500px);
     margin-top: 120px; }
   html body.single-wsuwp_uc_person #binder.fluid .row:not(.column):not(.rebound).pager {
     width: 100% !important; }
