--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -389,8 +389,9 @@ html {
 			&.featured-image {
 				background-size:contain;
 				position:absolute;
-				height: 200px;
-				margin-left:130px;
+				max-height: 250px;
+				width:calc(50% - 170px);
+				margin-left:calc(50% - 500px);
 				margin-top:120px
 			}
 		}
