--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -390,7 +390,7 @@ html {
 				background-size:contain;
 				position:absolute;
 				max-height: 250px;
-				width:calc(50% - 170px);
+				width:20%;
 				margin-left:calc(50% - 500px);
 				margin-top:120px
 			}
