Changes current text to brand
Changes current text to brand

--- a/scss/asc.css
+++ b/scss/asc.css
@@ -71,7 +71,7 @@ html {
               background-color: #343232; }
           html body .main-menu ul li.current a {
             background-color: #747270;
-            color: #343232 !important; }
+            color: #0094ca !important; }
           html body .main-menu ul li ul {
             display: none;
             visibility: hidden;
