--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -117,8 +117,8 @@ html {
 							}
 								&.current a {
 									background-color:$light-gray;
-									color:$darkest-gray !important;
-									
+									color:$brand !important;
+
 								}
 									ul {
 										display:none;
