Changes current to darkest gray back
Changes current to darkest gray back

--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -116,7 +116,7 @@ html {
 								}
 							}
 								&.current a {
-									background-color:$light-gray;
+									background-color:$darkest-gray;
 									color:$brand !important;
 
 								}
