--- a/scss/asc.css
+++ b/scss/asc.css
@@ -129,7 +129,7 @@ html {
         color: #4e4c4b;
         font-weight: 700;
         font-size: 1.8em;
-        line-height: 1.1em;
+        line-height: 1.3em;
         font-weight: 400; }
       html body main h4 {
         color: #0094ca;
@@ -278,8 +278,7 @@ html {
   html body.home #binder.fluid.max-1980 .row {
     max-width: 918px;
     margin-left: auto;
-    margin-right: auto;
-    margin-top: 2em; }
+    margin-right: auto; }
   html body.home .banner-container {
     position: relative; }
     html body.home .banner-container .logo-hp-container {
@@ -505,9 +504,9 @@ html {
           font-size: 75%; }
     html body.single-wsuwp_uc_project main section:first-of-type {
       margin-top: 0 !important; }
-    html body.home #binder.fluid main, html body.single-post #binder.fluid main {
+    html body.single-post #binder.fluid main {
       margin-top: 4em !important; }
-    html body.home .banner-container .logo-hp-container, html body.single-post .banner-container .logo-hp-container {
+    html body.single-post .banner-container .logo-hp-container {
       top: 24%; }
 
   /* html */ }
