--- a/scss/asc.css
+++ b/scss/asc.css
@@ -483,15 +483,6 @@ html {
       padding-top: 18px;
       padding-bottom: 18px;
       font-size: 110%; }
-    html body figure.featured-image {
-      position: absolute !important;
-      top: 0;
-      height: 200px !important;
-      display: block;
-      width: 100% !important;
-      min-height: 100px !important;
-      float: none;
-      margin-left: 0px !important; }
     html body #binder.fluid .row:not(.column):not(.rebound).pager {
       width: 100% !important; }
     html body #binder.fluid main {
@@ -612,7 +603,7 @@ html {
           margin-top: 10px;
           height: 45px; }
     html body figure.featured-image {
-      position: absolute !important;
+      position: initial !important;
       top: 0;
       height: 200px !important;
       display: block;
