--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -621,6 +621,10 @@ html {
 		 		}
 			}
 			footer.main-foot {
+				span {
+					padding-left: .5em;
+   					padding-right: .5em;
+				}
 				border-top:none;
 			 		ul {
 		 				li {
@@ -656,6 +660,9 @@ html {
 					}
 				}	
 			}
+			main {
+				margin-top:100px;
+			}
 			&.single-wsuwp_uc_entity {
 				main {
 					section.row:not(.boundless):not(.rebound) {
@@ -681,7 +688,7 @@ html {
 					}
 				}
 			}
-		
+
 			#binder.fluid .row:not(.column):not(.rebound).pager {
 				width:100% !important;
 			}
@@ -737,6 +744,7 @@ html {
 @media screen and (max-width : 989px) {
 	html {
 		body {
+
 			nav.main-menu {
 				position: fixed;
 				margin: 0;
@@ -906,6 +914,10 @@ html {
 				main {
 					header.main-header {
 						margin-top:0px;
+					}
+					.description {
+						width:100%;
+						float:initial;
 					}
 		 			section {
 		 				header {
