--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -864,7 +864,7 @@ html {
 			}
 			header.main-header {
 				margin-top:0px;
-				position: initial;
+				position: initial !important;
 			}
 			figure.featured-image {
 				position:initial !important;
