--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -993,13 +993,16 @@ html {
 						}
 				}
 			}
-			.page {
+			&.page {
 				float:none;
 				width:100% !important;
 				margin:0 !important;
+				main {
+					margin-top:0 !important;
 					header.article-header hgroup .ascent-num-box {
 						margin-top:0px !important;
 					}
+				}
 			}
 			.wsuwp_uc_project {
 				float:none;
